# aeserialization-rust

./: .gitignore  Cargo.toml
crates/aebytecode/: Cargo.toml  fate.toml
crates/aebytecode/src/: abi.rs  code.rs  code2.rs  data.rs  fate_op.rs  gen.rs  instruction.rs  lib.rs
crates/aebytecode/src/data/: consts.rs  datatype.rs  error.rs  types.rs  value.rs
crates/aeser/: Cargo.toml
crates/aeser-cli/: Cargo.toml
crates/aeser-cli/src/: main.rs
crates/aeser-wasm/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
crates/aeser-wasm/lib/: index.ts
crates/aeser-wasm/src/: lib.rs
crates/aeser/src/: contract_code.rs  id.rs
crates/aeserialization/: Cargo.toml
crates/aeserialization/bindings/: Id.ts  Tag.ts
crates/aeserialization/src/: api_encoder.rs  bytes.rs  contract_code.rs  error.rs  id.rs  lib.rs  rlp.rs
src/: api_encoder.rs  contract_code.rs  error.rs  id.rs  lib.rs  main.rs  rlp.rs
