[package]
name = "aebytecode"
version = "0.1.0"
authors = ["Gaith Hallak"]
edition = "2021"

[lib]
name = "aeb"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
blake2 = "0.10"
change-case = "0.2" # only needed for code gen
aeser = { path = "../aeser" }

[dev-dependencies]
proptest = "1.0.0"
