[package]
name = "aeser-wasm"
version = "0.1.0"
authors = ["Metin Akat <akat.metin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
aeserialization = { path = "../aeserialization" }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ['console']}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

