[package]
name = "aeserialization"
authors = ["Radosław Rowicki", "Gaith Hallak", "æternity core devs"]
version = "0.1.0"
edition = "2021"

[lib]
name = "aeser"
crate-type = ["cdylib", "rlib"]
proc-macro = true

[dependencies]
wasm-bindgen = "0.2.87"
wee_alloc = { version = "0.4.5", optional = true }
blake2 = "0.10.6"
bs58 = "0.5.0"
base64 = "0.21.2"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
ts-rs = "6.2.1"
rustler = "0.29.0"
sha2 = "0.10.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
proptest = "1.0.0"

[profile.release]
opt-level = "s"
